--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "_ext/svprettyplot"]
 	path = _ext/svprettyplot
 	url = https://github.com/FrancescoConti/svprettyplot
+[submodule "ips/hci"]
+	path = ips/hci
+	url = git@github.com:pulp-platform/hci
