--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -28,5 +28,6 @@ submodules:
   include:
      - ips/hwpe-stream
      - ips/hwpe-ctrl
+     - ips/hci
      - _ext/svprettyplot
   recursive: false
