--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-pydotplus
-sphinxcontrib-wavedrom==2.1.1
-sphinx-book-theme
+pydotplus==2.0.2
+sphinxcontrib-wavedrom==3.0.4
+sphinx-book-theme==0.3.3
