--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,7 +12,9 @@ sphinx:
   fail_on_warning: false
 
 build:
-  image: latest
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.11"
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats:
